[gd_scene load_steps=14 format=3 uid="uid://cy5pmgtnum1v2"]

[ext_resource type="Script" path="res://GUI/dialouge_system/scripts/dialouge_system.gd" id="1_8skom"]
[ext_resource type="Texture2D" uid="uid://c6vw30x811odt" path="res://GUI/dialouge_system/sprites/text-bubble.png" id="2_rf72g"]
[ext_resource type="FontFile" uid="uid://dqynfbikfwkxy" path="res://GUI/fonts/Abaddon Light.ttf" id="3_2bnae"]
[ext_resource type="FontFile" uid="uid://b0j83jpjdqy81" path="res://GUI/fonts/Abaddon Bold.ttf" id="4_pig16"]
[ext_resource type="Texture2D" uid="uid://d4lvlok4fjqb4" path="res://npc/sprites/portraits/npc_portrait_01.png" id="5_pqjqx"]
[ext_resource type="FontFile" uid="uid://dlv2hs6ryrj6j" path="res://GUI/fonts/m5x7.ttf" id="6_8n1yr"]

[sub_resource type="Gradient" id="Gradient_5dp28"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nrl72"]
gradient = SubResource("Gradient_5dp28")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_60tvg"]
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0
texture = ExtResource("2_rf72g")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyj2e"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_xyhmq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g5xqv"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.4, 1.5, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnaqi"]
_data = {
"RESET": SubResource("Animation_xyhmq"),
"default": SubResource("Animation_g5xqv")
}

[node name="DialougeSystem" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_8skom")

[node name="DialougeUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DialougeUI"]
modulate = Color(0, 0, 0, 0.486275)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_nrl72")

[node name="PanelContainer" type="PanelContainer" parent="DialougeUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -761.0
offset_top = -137.0
offset_right = -10.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_60tvg")

[node name="RichTextLabel" type="RichTextLabel" parent="DialougeUI/PanelContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.439216, 0.396078, 0.321569, 1)
theme_override_fonts/normal_font = ExtResource("3_2bnae")
theme_override_fonts/bold_font = ExtResource("4_pig16")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "Example [b]Text[/b]!!!
[wave] Wavy text [/wave]
[shake][color=orangered] Shaking[/color][shake]"

[node name="Name" type="Label" parent="DialougeUI"]
layout_mode = 0
offset_left = 171.0
offset_top = 255.0
offset_right = 259.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_pig16")
theme_override_font_sizes/font_size = 35
text = "NAME"

[node name="PortraitSprite" type="Sprite2D" parent="DialougeUI"]
position = Vector2(83, 311)
scale = Vector2(1.67, 1.67)
texture = ExtResource("5_pqjqx")
hframes = 4

[node name="Timer" type="Timer" parent="DialougeUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialougeUI"]

[node name="DialougeProgressIndicator" type="PanelContainer" parent="DialougeUI"]
self_modulate = Color(0.178992, 0.621092, 0.387402, 1)
layout_mode = 0
offset_left = 847.0
offset_top = 386.0
offset_right = 921.0
offset_bottom = 421.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gyj2e")

[node name="Label" type="Label" parent="DialougeUI/DialougeProgressIndicator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_8n1yr")
theme_override_font_sizes/font_size = 30
text = "Next"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialougeUI/DialougeProgressIndicator"]
libraries = {
"": SubResource("AnimationLibrary_lnaqi")
}
autoplay = "default"
